<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/summary"
        android:title="@string/summary"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"/>

    <item
        android:id="@+id/upcoming"
        android:title="@string/upcoming"
        android:icon="@drawable/baseline_format_align_justify_24"
        android:enabled="true"/>
    <item
        android:id="@+id/paid"
        android:title="@string/paid"
        android:icon="@drawable/baseline_payment_24"
        android:enabled="true"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_applications_24"
        android:enabled="true"/>


</menu>